# ThereminWebJuce

./: .gitignore  CMakeLists.txt  webJucePlan.md
docs/: architecture.md  pocPlan.md
dsp/: convolution.cpp  convolution.h  distortion.cpp  distortion.h  oscillator.cpp  ott.cpp  ott.h  sampler.cpp
frontend/public/: audio-engine.js  dsp-processor.js
frontend/src/: App.tsx
patches/: juce-wasm.patch  patch-juce.sh
